[gd_scene load_steps=16 format=3 uid="uid://p32ucbdoh3h8"]

[ext_resource type="Script" path="res://scripts/Registro.gd" id="1_i41gf"]
[ext_resource type="Texture2D" uid="uid://ct44731gqe5ya" path="res://Imagenes/RegistroUsuario/Registro de Usuario-12.png" id="2_d3p4k"]
[ext_resource type="ButtonGroup" uid="uid://b6t1mkbmljs1r" path="res://Escenas/sexoradiobutton.tres" id="3_7wbqm"]
[ext_resource type="ButtonGroup" uid="uid://d3t5isdmghosp" path="res://Escenas/Cuil_cuitradio.tres" id="4_47ty6"]
[ext_resource type="PackedScene" uid="uid://b7jonfd41k68h" path="res://Escenas/cuadro_dialogo.tscn" id="5_0xrnp"]
[ext_resource type="Texture2D" uid="uid://oofx3r2ol3d4" path="res://Imagenes/capcha.jpeg" id="5_gn0lg"]
[ext_resource type="AudioStream" uid="uid://baectnpuaqc7f" path="res://sonidos/Musica y sonidos a utilizar/reparando.ogg" id="6_xqb5y"]
[ext_resource type="PackedScene" uid="uid://27d4ixo8lm6y" path="res://Escenas/pausa.tscn" id="8_ibty7"]
[ext_resource type="PackedScene" uid="uid://7y0gl8rhxmbi" path="res://Escenas/ayuda.tscn" id="9_6bmav"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sc8rw"]
size = Vector2(138, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8lh1"]
size = Vector2(1314, 175)

[sub_resource type="Animation" id="Animation_44334"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wva0c"]
resource_name = "arreglar"
length = 7.9
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 5.3, 5.4, 6.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"deshabilitar_entrada"
}, {
"args": [],
"method": &"eliminar_fake"
}, {
"args": [],
"method": &"cambiar_dialogo"
}, {
"args": [],
"method": &"habilitar_entrada"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 6.7, 7.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vcppx"]
resource_name = "fin"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"pasar_al_siguiente"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5yacj"]
_data = {
"RESET": SubResource("Animation_44334"),
"arreglar": SubResource("Animation_wva0c"),
"fin": SubResource("Animation_vcppx")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i41gf")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ScrollContainer"]
layout_mode = 2
texture = ExtResource("2_d3p4k")

[node name="fake" type="Control" parent="ScrollContainer/TextureRect"]
anchors_preset = 0

[node name="Label" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 128.0
offset_top = 224.0
offset_right = 221.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Talle zapato"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label"]
layout_mode = 0
offset_left = 96.0
offset_top = 8.0
offset_right = 237.0
offset_bottom = 28.0

[node name="Label2" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 64.0
offset_top = 264.0
offset_right = 223.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Calorias consumidas"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label2"]
layout_mode = 0
offset_left = 160.0
offset_right = 301.0
offset_bottom = 20.0

[node name="Label3" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 128.0
offset_top = 304.0
offset_right = 222.0
offset_bottom = 330.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Dias de vida
"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label3"]
layout_mode = 0
offset_left = 96.0
offset_right = 237.0
offset_bottom = 20.0

[node name="Label4" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 120.0
offset_top = 344.0
offset_right = 223.0
offset_bottom = 370.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Pierna buena"
horizontal_alignment = 2

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label4"]
layout_mode = 0
offset_left = 104.0
offset_right = 245.0
offset_bottom = 20.0

[node name="Label5" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 80.0
offset_top = 384.0
offset_right = 219.0
offset_bottom = 410.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Nombre tu vecino"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label5"]
layout_mode = 0
offset_left = 144.0
offset_right = 285.0
offset_bottom = 20.0

[node name="Label11" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 120.0
offset_top = 488.0
offset_right = 213.0
offset_bottom = 514.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Talle zapato"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label11"]
layout_mode = 0
offset_left = 96.0
offset_top = 8.0
offset_right = 237.0
offset_bottom = 28.0

[node name="Label12" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 56.0
offset_top = 528.0
offset_right = 215.0
offset_bottom = 554.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Calorias consumidas"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label12"]
layout_mode = 0
offset_left = 160.0
offset_right = 301.0
offset_bottom = 20.0

[node name="Label13" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 856.0
offset_top = 520.0
offset_right = 950.0
offset_bottom = 546.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Dias de vida
"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label13"]
layout_mode = 0
offset_left = 96.0
offset_right = 237.0
offset_bottom = 20.0

[node name="Label14" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 112.0
offset_top = 608.0
offset_right = 215.0
offset_bottom = 634.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Pierna buena"
horizontal_alignment = 2

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label14"]
layout_mode = 0
offset_left = 104.0
offset_right = 245.0
offset_bottom = 20.0

[node name="Label15" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 808.0
offset_top = 568.0
offset_right = 947.0
offset_bottom = 594.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Nombre tu vecino"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label15"]
layout_mode = 0
offset_left = 144.0
offset_right = 285.0
offset_bottom = 20.0

[node name="Label6" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 848.0
offset_top = 224.0
offset_right = 892.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Tipo de cortinas
"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label6"]
layout_mode = 0
offset_left = 128.0
offset_right = 269.0
offset_bottom = 20.0

[node name="Label7" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 872.0
offset_top = 264.0
offset_right = 973.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Talle Remera"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label7"]
layout_mode = 0
offset_left = 104.0
offset_right = 245.0
offset_bottom = 20.0

[node name="Label8" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 856.0
offset_top = 304.0
offset_right = 970.0
offset_bottom = 330.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Tipo de sangre"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label8"]
layout_mode = 0
offset_left = 120.0
offset_right = 261.0
offset_bottom = 20.0

[node name="Label16" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 96.0
offset_top = 568.0
offset_right = 210.0
offset_bottom = 594.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Tipo de sangre"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label16"]
layout_mode = 0
offset_left = 120.0
offset_right = 261.0
offset_bottom = 20.0

[node name="Label17" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 832.0
offset_top = 600.0
offset_right = 946.0
offset_bottom = 626.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Tipo de sangre"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label17"]
layout_mode = 0
offset_left = 120.0
offset_right = 261.0
offset_bottom = 20.0

[node name="Label9" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 808.0
offset_top = 344.0
offset_right = 969.0
offset_bottom = 396.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Distancia al sol en km"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label9"]
layout_mode = 0
offset_left = 168.0
offset_right = 309.0
offset_bottom = 20.0

[node name="Label10" type="Label" parent="ScrollContainer/TextureRect/fake"]
layout_mode = 0
offset_left = 928.0
offset_top = 400.0
offset_right = 972.0
offset_bottom = 426.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Dni/2
"

[node name="TextEdit" type="TextEdit" parent="ScrollContainer/TextureRect/fake/Label10"]
layout_mode = 0
offset_left = 49.0
offset_top = 2.0
offset_right = 190.0
offset_bottom = 22.0

[node name="nombre2" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 705.0
offset_right = 888.0
offset_bottom = 736.0

[node name="nombre" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 226.0
offset_right = 752.0
offset_bottom = 257.0

[node name="correo" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 744.0
offset_right = 888.0
offset_bottom = 768.0

[node name="repetir_correo" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 792.0
offset_right = 888.0
offset_bottom = 816.0

[node name="nombre5" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 840.0
offset_right = 888.0
offset_bottom = 864.0

[node name="nombre6" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 888.0
offset_right = 888.0
offset_bottom = 912.0

[node name="respuesta_secreta" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 936.0
offset_right = 888.0
offset_bottom = 960.0
secret = true

[node name="respuesta_secreta_nuevamente" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 976.0
offset_right = 888.0
offset_bottom = 1000.0
secret = true

[node name="nombre9" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 776.0
offset_top = 1144.0
offset_right = 1048.0
offset_bottom = 1168.0

[node name="cuil" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 544.0
offset_right = 752.0
offset_bottom = 568.0

[node name="apellido" type="LineEdit" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 272.0
offset_right = 752.0
offset_bottom = 303.0

[node name="OptionButton" type="OptionButton" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 416.0
offset_right = 752.0
offset_bottom = 436.0
item_count = 6
selected = 0
popup/item_0/text = "Seleccionar"
popup/item_0/id = 0
popup/item_1/text = "Argentina"
popup/item_1/id = 1
popup/item_2/text = "Bolivia"
popup/item_2/id = 2
popup/item_3/text = "Brasil"
popup/item_3/id = 3
popup/item_4/text = "Paraguay"
popup/item_4/id = 4
popup/item_5/text = "Uruguay"
popup/item_5/id = 5

[node name="pasaporte" type="OptionButton" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 616.0
offset_top = 584.0
offset_right = 752.0
offset_bottom = 615.0
item_count = 6
selected = 0
popup/item_0/text = "Seleccionar"
popup/item_0/id = 0
popup/item_1/text = "Argentina"
popup/item_1/id = 1
popup/item_2/text = "Bolivia"
popup/item_2/id = 2
popup/item_3/text = "Brasil"
popup/item_3/id = 3
popup/item_4/text = "Paraguay"
popup/item_4/id = 4
popup/item_5/text = "Uruguay"
popup/item_5/id = 5

[node name="fecha" type="Control" parent="ScrollContainer/TextureRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextEdit3" type="LineEdit" parent="ScrollContainer/TextureRect/fecha"]
layout_mode = 0
offset_left = 600.0
offset_top = 368.0
offset_right = 667.063
offset_bottom = 399.0
max_length = 2

[node name="TextEdit4" type="LineEdit" parent="ScrollContainer/TextureRect/fecha"]
layout_mode = 0
offset_left = 680.0
offset_top = 368.0
offset_right = 747.063
offset_bottom = 399.0
max_length = 2

[node name="TextEdit5" type="LineEdit" parent="ScrollContainer/TextureRect/fecha"]
layout_mode = 0
offset_left = 760.0
offset_top = 368.0
offset_right = 827.063
offset_bottom = 399.0
max_length = 4

[node name="Label" type="Label" parent="ScrollContainer/TextureRect/fecha"]
layout_mode = 0
offset_left = 672.0
offset_top = 368.0
offset_right = 712.0
offset_bottom = 394.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "/"

[node name="Label2" type="Label" parent="ScrollContainer/TextureRect/fecha"]
layout_mode = 0
offset_left = 752.0
offset_top = 368.0
offset_right = 792.0
offset_bottom = 394.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "/"

[node name="recargar" type="Button" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 424.0
offset_top = 1128.0
offset_right = 496.0
offset_bottom = 1192.0
flat = true

[node name="Label18" type="Label" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 856.0
offset_top = 480.0
offset_right = 949.0
offset_bottom = 506.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Talle zapato"

[node name="TextEdit" type="LineEdit" parent="ScrollContainer/TextureRect/Label18"]
layout_mode = 0
offset_left = 96.0
offset_right = 237.0
offset_bottom = 28.0

[node name="repetir_repeticion" type="Label" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 896.0
offset_top = 784.0
offset_right = 1065.0
offset_bottom = 836.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Repetir repeticion 
del correo electrònico"

[node name="TextEdit" type="LineEdit" parent="ScrollContainer/TextureRect/repetir_repeticion"]
layout_mode = 0
offset_left = 176.0
offset_top = 8.0
offset_right = 317.0
offset_bottom = 39.0

[node name="Label19" type="Label" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 896.0
offset_top = 704.0
offset_right = 1090.0
offset_bottom = 756.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Cumpleaños del tio 
de la vecina del hermano"

[node name="TextEdit" type="LineEdit" parent="ScrollContainer/TextureRect/Label19"]
layout_mode = 0
offset_left = 200.0
offset_top = 8.0
offset_right = 341.0
offset_bottom = 36.0

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 608.0
offset_top = 312.0
offset_right = 713.0
offset_bottom = 343.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
button_group = ExtResource("3_7wbqm")
text = "Femenino"

[node name="CheckBox2" type="CheckBox" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 712.0
offset_top = 312.0
offset_right = 819.0
offset_bottom = 343.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
button_group = ExtResource("3_7wbqm")
text = "Masculino"

[node name="cuilBox" type="CheckBox" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 608.0
offset_top = 488.0
offset_right = 713.0
offset_bottom = 519.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
button_group = ExtResource("4_47ty6")
text = "CUIL/CUIT"

[node name="pasaportebox" type="CheckBox" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 712.0
offset_top = 488.0
offset_right = 819.0
offset_bottom = 519.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
button_group = ExtResource("4_47ty6")
text = "Pasaporte"

[node name="enviar" type="Button" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 1152.0
offset_top = 1280.0
offset_right = 1209.0
offset_bottom = 1311.0
text = "Enviar"

[node name="salir" type="Button" parent="ScrollContainer/TextureRect"]
layout_mode = 0
offset_left = 1072.0
offset_top = 1280.0
offset_right = 1129.0
offset_bottom = 1311.0
text = "Salir"

[node name="Area2D" type="Area2D" parent="ScrollContainer/TextureRect"]
position = Vector2(625, 604)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScrollContainer/TextureRect/Area2D"]
position = Vector2(59, -4.5)
shape = SubResource("RectangleShape2D_sc8rw")

[node name="advertencia" type="Area2D" parent="ScrollContainer/TextureRect"]
position = Vector2(-946, 720)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScrollContainer/TextureRect/advertencia"]
position = Vector2(1595, 41.5)
shape = SubResource("RectangleShape2D_l8lh1")

[node name="Capcha" type="Sprite2D" parent="ScrollContainer/TextureRect"]
position = Vector2(287.875, 1159)
scale = Vector2(0.558511, 0.797872)
texture = ExtResource("5_gn0lg")

[node name="CuadroDialogo" parent="." instance=ExtResource("5_0xrnp")]
layout_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5yacj")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_xqb5y")
volume_db = 3.0

[node name="ayuda" parent="." instance=ExtResource("9_6bmav")]
layout_mode = 1

[node name="Pausa" parent="." instance=ExtResource("8_ibty7")]
layout_mode = 1

[connection signal="focus_exited" from="ScrollContainer/TextureRect/nombre2" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/nombre2" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/nombre" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/nombre" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/correo" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/correo" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/repetir_correo" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/repetir_correo" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/nombre5" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/nombre5" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/nombre6" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/nombre6" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/respuesta_secreta" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/respuesta_secreta" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/respuesta_secreta_nuevamente" to="." method="_on_nombre_2_focus_exited"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/nombre9" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/nombre9" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/cuil" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/cuil" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/apellido" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/apellido" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/fecha/TextEdit3" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/fecha/TextEdit3" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/fecha/TextEdit4" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/fecha/TextEdit4" to="." method="_on_nombre_2_gui_input"]
[connection signal="focus_exited" from="ScrollContainer/TextureRect/fecha/TextEdit5" to="." method="_on_nombre_2_focus_exited"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/fecha/TextEdit5" to="." method="_on_nombre_2_gui_input"]
[connection signal="pressed" from="ScrollContainer/TextureRect/recargar" to="." method="_on_recargar_pressed"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/repetir_repeticion/TextEdit" to="." method="_on_nombre_2_gui_input"]
[connection signal="gui_input" from="ScrollContainer/TextureRect/Label19/TextEdit" to="." method="_on_nombre_2_gui_input"]
[connection signal="pressed" from="ScrollContainer/TextureRect/enviar" to="." method="_on_enviar_pressed"]
[connection signal="mouse_entered" from="ScrollContainer/TextureRect/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="ScrollContainer/TextureRect/advertencia" to="." method="_on_advertencia_mouse_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
